--- a/deploy-dev.yaml
+++ b/deploy-dev.yaml
@@ -4,7 +4,7 @@ info:
   title: Bink API
   description: 'This document defines the Bink API URLs, parameters, request bodies, responses. Each operation offers a mock end point. Regex patterns, minLength, and maxLength parameters are for front-end guidance only.'
   contact:
-    email: mmorar@bink.com
+    email: pb@bink.com
   x-logo:
     url: https://api.gb.bink.com/content/media/logos/bink_with_text.png
 servers:
